--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
-  },
+    "start": "nodemon ./src/server.js",
+    "lint": "eslint ./src"
+  }, 
   "keywords": [],
   "author": "",
   "license": "ISC",
